# smart-file-manager-mcp

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE_INTEGRATION_GUIDE.md  CONTRIBUTING.md  FINAL_SETUP_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  INSTALLATION_GUIDE.md  INTEGRATION_COMPLETE_GUIDE.md  LICENSE  MCP_DIAGNOSTIC_REPORT.md  QUICK_START_GUIDE.md  README.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.4.0.md  TRANSLATION_FIXES_SUMMARY.md  TROUBLESHOOTING.md  build.sh  check-ollama.sh  claude-config.json  claude_desktop_tips.md  db_manager.py  deletion_api_endpoints.py  deploy.sh  deploy_deletion_tracking.sh  deploy_mcp_integration.sh  deploy_mcp_integration_fixed.sh  deploy_with_qdrant.sh  diagnose-mcp.sh  docker-compose-multimedia-v4.yml  docker-compose-simple.yml  docker-compose.yml  enhanced_api_updated.py  enhanced_deletion_tracking.py  enhanced_embedding_manager_updated.py  enhanced_file_monitor.py  indexer.py  install.sh  mcp_deletion_tools.ts  (+15 more)
ai-services/mafm/: .gitignore  pyproject.toml
ai-services/mafm/mafm/: nohup.out  observer.py  shell.py  watchdog.sh
ai-services/mafm/mafm/MAFM_test/coding/: algorithm_coding.txt
ai-services/mafm/mafm/MAFM_test/download/: document_download.txt
ai-services/mafm/mafm/MAFM_test/report/: [24셈틀제]cluster23_최종보고서.docx  financial_report.txt  marketing_report.txt  scientific_report.txt
ai-services/mafm/mafm/agent/agents/: __init__.py  analyst.py  member.py  supervisor.py
ai-services/mafm/mafm/rag/: fileops.py  vectorDb.py
ai-services/mafm/mafm/rag/C_library/: Makefile  fileops.c  fileops.h  utils.c  (+1 more)
(+108 files in other folders)
